segundo merge - modificaciones javascript

--- a/javascript-products-app-oop/index.html
+++ b/javascript-products-app-oop/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serie de Fibonacci</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Product App</title>
+    <!-- Bootswatch Theme -->
+    <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="App.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Serie Fibonacci</a>
+        <a class="navbar-brand" href="#">Products App</a>
     </nav>
+
+
     <div class="container">
         <!-- APPLICATION -->
         <div id="App" class="row pt-5">
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Select option fibonacci</h4>
+                        <h4>Add Add A Product</h4>
                     </div>
                     <form id="product-form" class="card-body">
                         <div class="form-group">
@@ -38,6 +46,7 @@
         </div>
     </div>
 
-    <script src="./Fibonacci.js"></script>
+    <script src="App.js"></script>
 </body>
+
 </html>
